when user disconnects the keystore is deleted(if exist) at the launch of chat, all files .jks .cer .bat/.sh are deleted